<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fillet_bg_white_line_black"
    android:padding="20dp">


    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/str_prompt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorRed" />


    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Content"
        android:layout_marginTop="29dp"
        android:background="@color/colorRed"
        android:text="@string/str_cancel"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/Determine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="29dp"
        android:background="@color/colorGreen"
        android:text="@string/str_determine"
        android:textColor="@color/colorWhite" />

</RelativeLayout>