<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <include
        android:id="@+id/Toolbar"
        layout="@layout/layout_toolbar" />

    <!--人脸识别阈值-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_faceRecognitionThreshold"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/faceRecognitionThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/faceRecognitionThresholdBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBlack" />
    </RelativeLayout>
    <!--活体开关-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_livingBody"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/livingBodySw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBlack" />
    </RelativeLayout>

    <!--同人重复验证间隔-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/str_repeatVerificationInterval"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repeatVerificationInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/repeatVerificationIntervalSBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="60"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBlack" />
    </RelativeLayout>


    <!--验证实名显示-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_verifyRealNameDisplay"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/verifyRealNameDisplaySw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBlack" />
    </RelativeLayout>


</LinearLayout>