<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <include
        android:id="@+id/Toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/Photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/TakePictures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/str_takePictures"
                android:textStyle="bold" />

            <!--人员类型-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="@string/str_person_type_point"
                        android:textColor="@color/colorBlack" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                    <Spinner
                        android:id="@+id/PersonType"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"


                        android:layout_weight="1"
                        android:entries="@array/PersonType" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBlack" />
            </RelativeLayout>


            <!--姓名-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="*"
                        android:textColor="@color/colorRed"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/str_name_point"
                        android:textColor="@color/colorBlack" />

                    <EditText
                        android:id="@+id/Name"
                        android:paddingLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@null" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBlack" />
            </RelativeLayout>


            <!--性别-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="@string/str_sex_point"
                        android:textColor="@color/colorBlack" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                    <Spinner
                        android:id="@+id/PersonSex"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"


                        android:layout_weight="1"
                        android:entries="@array/PersonSex" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBlack" />
            </RelativeLayout>


            <!--年龄-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="@string/str_age_point"
                        android:textColor="@color/colorBlack" />

                    <EditText
                        android:id="@+id/Age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@null"
                        android:inputType="number" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBlack" />
            </RelativeLayout>

            <!--身份证-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="@string/str_idCard_point"
                        android:textColor="@color/colorBlack" />

                    <EditText
                        android:id="@+id/IDCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@null" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBlack" />
            </RelativeLayout>

            <!--身份证-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="@string/str_iccard_point"
                        android:textColor="@color/colorBlack" />

                    <EditText
                        android:id="@+id/ICCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@null" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBlack" />
            </RelativeLayout>


            <!--描述-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="@string/str_description_point"
                        android:textColor="@color/colorBlack" />

                    <EditText
                        android:id="@+id/Description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@null" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
